src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

/* Home page CSS */
.container{
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
    height: 1000px;
    width: 100%;
    background-color: rgb(46, 45, 45);
}

.container h1{
    text-align: center;
    color: white;
    font-family: Inter;
    font-size: 50px;
}

.container .defaultButton{
    padding: 5px;
    margin: 12px;
    margin-top: 15px;
    width: 7%;
    color: white;
    background-color: rgb(0, 121, 202);
    border: none;
    border-radius: 7px;
    font-family: Inter;
}

.siteDescription{
    text-align: justify;
    color: white;
    font-family: Inter;
    width: 30%;
    margin: 20px;
    padding: 10px;
}

.defaultButton{
    padding: 5px;
    margin: 7px;
    width: 5%;
    color: white;
    background-color: rgb(0, 121, 202);
    border: none;
    border-radius: 7px;
    font-family: Inter;
}

.findButton{
    padding: 0px;
    margin: 7px;
    width: 70%;
    height: 70%;
    color: white;
    background-color: rgb(0, 121, 202);
    border: none;
    border-radius: 7px;
    font-family: Inter;
    font-size: 100%;
}

.findTournament{
    display: flex;
    align-items: center;
    margin: 20px;
}

.container div input{
    padding: 10px;
    margin: 15px;
    border-radius: 10px;
    width: 100%;
    color: black;
    font-family: Inter;
}

.loginHome{
    display: flex;
    justify-content: flex-end;
    width: 100%;
}

/* header CSS */
.header{
    background-color: rgb(0, 121, 202);
    color: white;
    height: 100px;
    font-size: 20px;
    font-family: Inter;
    display: flex;
}

.headerLinks{
    display: flex;
    align-content: center;
    text-align: center;
    margin: 20px;
}
.headerLinks a{
    display: box;
    margin: 15px;
    color: white;
}

/* footer CSS */
.footer{
    margin-top: 0px;
    padding: 10px;
    background-color: rgb(0, 121, 202);
    position: relative;
    height: 50px;
    bottom: 0;
    left: 0;
    overflow: hidden;
}

/* login CSS */
.loginWrapper{  
    text-align: center;
    color: white;
    height: 1000px;
    width: 100%;
    background-color: rgb(46, 45, 45);

}

.loginWrapper h1{
    padding: 20px;
    margin: 0px;
    font-family: Inter;
}

.loginForm input{
    padding: 10px;
    margin: 10px;
    border-radius: 10px;
    width: 20%;
    color: black;
    font-family: Inter;
}

.loginForm button{
    padding: 5px;
    margin: 7px;
    width: 5%;
    color: white;
    background-color: rgb(0, 121, 202);
    border: none;
    border-radius: 5px;
    font-family: Inter;
}

.loginWrapper p{
    margin: 5px;
}
/* About page CSS*/
.aboutWrapper{  
    text-align: center;
    color: white;
    height: 1000px;
    width: 100%;
    background-color: rgb(46, 45, 45);

}
.aboutWrapper p{
    margin: 5px;
}

